--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
     "axios": "^1.3.4",
+    "react-bootstrap": "^2.7.2",
     "react-router-dom": "^6.8.2",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
